<resources>
    <string name="app_name">IHNA Student Hub</string>


    <string name="action_settings">Settings</string>
    <string name="signin">Sign in</string>
    <string name="enter_security_pin">Enter Security Pin</string>
    <string name="Forgot_pin">Forgot Pin?</string>
    <string name="call_ihna">Call IHNA</string>
    <string name="sms_warning">An SMS will be sent to the  new number</string>
    <string name="Sign_in">Sign in</string>
    <string name="create_Secuity_pin">Create Security PIN</string>
    <string name="Confirm_pin">Confirm Security PIN</string>
    <string name="Enter_new_pin">New Security PIN</string>
    <string name="current_security_pin">Current Security PIN</string>
    <string name="Title">Title </string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="change_number">Change Mobile Number</string>
    <string name="mobile_number">Mobile Number : </string>
    <string name="username">User Name</string>
    <string name="drawer_open">open</string>
    <string name="address">Address</string>
    <string name="about_us">About us</string>
    <string name="app_version">App Version</string>
    <string name="terms_and_conditon">Terms and Condition</string>


</resources>
