<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


<TextView
    android:layout_width="match_parent"
    android:text="Profile"
    android:padding="10dp"
    android:gravity="center"
    android:textColor="@color/white"
    android:textSize="20sp"
    android:id="@+id/profile_title"
    android:layout_alignParentTop="true"
    android:background="@color/lightblue"
    android:layout_height="wrap_content" />



    <LinearLayout
        android:layout_below="@+id/profile_title"
        android:id="@+id/home_inner_container"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:weightSum="10" >





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@color/profilepic_bg_color" >

            <ImageView
                android:id="@+id/imageView2"
              android:layout_height="100dp"
                android:layout_width="100dp"
                android:background="@drawable/profile_pic"
                android:layout_centerInParent="true"
                android:src="@drawable/profile_icon_bg" />

            <TextView
                android:id="@+id/home_page_username1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/greenTextcolour" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
android:scrollbarAlwaysDrawVerticalTrack="true"
            android:layout_height="match_parent" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/home_page_titleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/linearLayout"
                        android:layout_weight="2"
                        android:text="@string/Title"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/Profile_page_titleTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/linearLayout"
                        android:layout_weight="3"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <View
                    android:id="@+id/viewline1"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/home_page_titleLayout"
                    android:layout_marginBottom="15dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/home_page_firstnamelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/viewline1"
                    android:orientation="horizontal"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/linearLayout"
                        android:layout_weight="2"
                        android:text="@string/firstname"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/Profile_page_first_nametv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/linearLayout"
                        android:layout_weight="3"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <View
                    android:id="@+id/viewline2"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/home_page_firstnamelayout"
                    android:layout_marginBottom="15dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/home_page_lastnamelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/viewline2"
                    android:orientation="horizontal"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/linearLayout"
                        android:layout_weight="2"
                        android:text="@string/lastname"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/Profile_page_last_nametv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/linearLayout"
                        android:layout_weight="3"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <View
                    android:id="@+id/viewline3"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/home_page_lastnamelayout"
                    android:layout_marginBottom="15dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/home_page_user_namelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/viewline3"
                    android:orientation="horizontal"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/linearLayout"
                        android:layout_weight="2"
                        android:text="@string/username"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/Profile_page_user_nametv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/linearLayout"
                        android:layout_weight="3"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <View
                    android:id="@+id/viewline4"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/home_page_user_namelayout"
                    android:layout_marginBottom="15dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/home_page_user_addresslayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/viewline4"
                    android:orientation="horizontal"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/textView64"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/linearLayout"
                        android:layout_weight="1"
                        android:text="@string/address"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/Profile_page_user_addressTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/linearLayout"
                        android:layout_weight="3"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <View
                    android:id="@+id/viewline68"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/home_page_user_addresslayout"

                    android:background="@android:color/darker_gray" />
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>